Fix overflowing text and add some padding and remove some borders

--- a/src/HomePage.css
+++ b/src/HomePage.css
@@ -23,6 +23,9 @@
 	letter-spacing: 0.1em;
 	font-weight: 400;
 	margin-bottom: 10px;
+	overflow: auto;
+	width: 100%;
+	text-align: center;
 }
 
 .homepage-avatar-url {
@@ -48,4 +51,7 @@
 	color: black;
 	font-weight: 400;
 	letter-spacing: 0.1em;
+	text-overflow: ellipsis;
+	white-space: nowrap;
+	overflow: hidden;
 }
