--- a/src/styles/form.css
+++ b/src/styles/form.css
@@ -5,6 +5,8 @@
 	-webkit-text-fill-color: transparent;
 	letter-spacing: 0.1em;
 	font-size: 50px;
+	overflow: auto;
+	width: 100%;
 }
 
 .form-field-box {
