--- a/src/styles/user-profile.css
+++ b/src/styles/user-profile.css
@@ -28,6 +28,7 @@
 	color: var(--ccRed);
 	letter-spacing: 0.1em;
 	font-size: 50px;
+	overflow: auto;
 }
 
 .user-info-details {
@@ -198,18 +199,24 @@ button.black-bordered-button.btn.btn-default:focus {
 	white-space: pre-wrap;
 	line-height: 2em;
 	text-align: justify;
+	overflow: auto;
 }
 
 .small-field-text {
 	font-weight: 400;
 	font-size: 13px;
 	margin: 5px 0;
+	overflow: auto;
 }
 
 .wip-summary {
 	font-weight: 400;
 	padding: 20px 0;
 	border-bottom: 1px lightgray solid;
+}
+
+.wip-summary:last-child {
+	border-bottom: 0;
 }
 
 .display-WIPs a{
@@ -229,10 +236,8 @@ button.black-bordered-button.btn.btn-default:focus {
 	width: 100%;
 	height: 50px;
     line-height: 50px;
-    overflow: hidden;
-	text-overflow: ellipsis;
-	white-space: nowrap;
-	display: block;
+    overflow: auto;
+    display: block;
 }
 
 .wip-wc-text {
@@ -261,6 +266,7 @@ button.black-bordered-button.btn.btn-default:focus {
 	font-size: 14px;
 	color: black;
 	line-height: 2em;
+	overflow: auto;
 }
 
 .user-traits {
